--- a/distribution/kubernetes/datacenter/metasfresh-helm/templates/ingress.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/templates/ingress.yaml
@@ -1,15 +1,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress
+  name: {{ .Release.Name }}-ingress
   namespace: {{ .Release.Namespace }}
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   {{ if .Values.ingress.tls.enabled }}
   tls:
   - hosts:
-    secretName: metasfresh-{{ .Release.Name }}-tls-secret
+    - {{ .Values.ingress.webui.url }}
+    {{ if .Values.ingress.pgadmin.enabled }}
+    - {{ .Values.ingress.pgadmin.url }}
+    {{ end }}
+    secretName: {{ .Release.Name }}-tls
   {{ end }}
   rules:
   - host: {{ .Values.ingress.webui.url }}
