--- a/distribution/kubernetes/datacenter/pgadmin-helm/templates/pgadmin-secret.yaml
+++ b/distribution/kubernetes/datacenter/pgadmin-helm/templates/pgadmin-secret.yaml
@@ -1,10 +1,10 @@
+
 apiVersion: v1
 kind: Secret
 metadata:
-  name: metasfresh-{{ .Release.Name }}-pgadmin-secret
+  name: metasfresh-pgadmin-secret
   namespace: {{ .Release.Namespace }}
 type: Opaque
 data:
   default-email: {{ .Values.pgadmin.defaultEmail | b64enc }}
   default-password: {{ .Values.pgadmin.defaultPassword | b64enc }}
-  
