add db pw and transaction log

--- a/distribution/kubernetes/datacenter/metasfresh-helm/templates/db-secret.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/templates/db-secret.yaml
@@ -7,4 +7,5 @@ type: Opaque
 data:
   username: {{ .Values.db.username | b64enc }}
   password: {{ .Values.db.password | b64enc }}
+  postgrespw: {{ .Values.db.postgrespw | b64enc }}
   
