add dataStorageSize values

--- a/distribution/kubernetes/datacenter/pgadmin-helm/templates/pgadmin.yaml
+++ b/distribution/kubernetes/datacenter/pgadmin-helm/templates/pgadmin.yaml
@@ -69,7 +69,7 @@ spec:
       - ReadWriteOnce
       resources:
         requests:
-          storage: 1Gi
+          storage: {{ .Values.pgadmin.dataStorageSize }}
       storageClassName: do-block-storage
 
 
