--- a/distribution/kubernetes/datacenter/metasfresh-helm/templates/search.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/templates/search.yaml
@@ -82,6 +82,6 @@ spec:
       - ReadWriteOnce
       resources:
         requests:
-          storage: 5Gi
+          storage: {{ .Values.search.dataStorageSize }}
       storageClassName: do-block-storage
       
