--- a/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
@@ -38,6 +38,7 @@ search:
   image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
   port: 
     search: 9200
+  dataStorageSize: 5Gi
   clusterName: metasfresh
   resources:
     memLimit: 1073741824 #(in bytes)
