add env DEBUG_CAT_NGINX_CONF_FILE

--- a/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
@@ -54,6 +54,8 @@ webui:
   image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-dev:master_dockerimages_5.175.2_3_masterdockerimages
   port:
     webui: 80
+  debug:
+    CatNginxConfigFile: '"n"'
 
 ingress:
   webui:
