--- a/distribution/kubernetes/datacenter/metasfresh-helm/templates/webui.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/templates/webui.yaml
@@ -61,7 +61,9 @@ spec:
         - name: WEBUI_API_PROXYPASS_HOST
           value: metasfresh-{{ .Release.Name }}-webapi
         - name: WEBUI_API_PROXYPASS_PORT
-          value: '{{ .Values.webapi.port.webapi }}'  
+          value: '{{ .Values.webapi.port.webapi }}'
+        - name: DEBUG_CAT_NGINX_CONF_FILE
+          value: {{ .Values.webui.debug.CatNginxConfigFile }}  
         volumeMounts:
         - mountPath: /etc/localtime
           name: host-localtime
