--- a/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
@@ -40,6 +40,8 @@ search:
   port: 
     search: 9200
   dataStorageSize: 5Gi
+  username: metasfresh
+  password: metasfresh
   clusterName: metasfresh
   resources:
     memLimit: 1073741824 #(in bytes)
