--- a/distribution/kubernetes/minikube/metasfresh-helm/templates/webapi.yaml
+++ b/distribution/kubernetes/minikube/metasfresh-helm/templates/webapi.yaml
@@ -76,6 +76,9 @@ spec:
           value: metasfresh-{{ .Release.Name }}-search
         - name: ES_PORT
           value: '{{ .Values.search.port.search }}'
+        # This var is needed to prevent an error at startup; thx to https://stackoverflow.com/questions/69487385/elasticsearch-client-is-defaulting-to-localhost 
+        - name: SPRING_DATA_ELASTICSEARCH_CLIENT_REACTIVE_ENDPOINTS
+          value: metasfresh-{{ .Release.Name }}-search:{{ .Values.search.port.search }}
         #rabbitmq
         - name: RABBITMQ_HOST
           value: metasfresh-{{ .Release.Name }}-rabbitmq
