--- a/distribution/kubernetes/datacenter/metasfresh-helm/templates/rabbitmq.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/templates/rabbitmq.yaml
@@ -96,5 +96,5 @@ spec:
       resources:
         requests:
           storage: {{ .Values.rabbitmq.dataStorageSize }}
-      storageClassName: do-block-storage
+      storageClassName: {{ .Values.storageClassName }}
           
