--- a/distribution/kubernetes/datacenter/pgadmin-helm/templates/pgadmin.yaml
+++ b/distribution/kubernetes/datacenter/pgadmin-helm/templates/pgadmin.yaml
@@ -70,6 +70,6 @@ spec:
       resources:
         requests:
           storage: {{ .Values.pgadmin.dataStorageSize }}
-      storageClassName: do-block-storage
+      storageClassName: {{ .Values.storageClassName }}
 
 
