--- a/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/datacenter/metasfresh-helm/values.yaml
@@ -1,6 +1,8 @@
 
+storageClassName: do-block-storage #storage class for persistent volumes
+
 app:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-app:master_dockerimages_5.175.2_52_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-app:master_dockerimages_5.175.2_61_masterdockerimages
   port:
     app: 8282
     debug: 8788
@@ -12,9 +14,9 @@ app:
 
 db:
   image: postgres:14.2
-  imageInit: nexus.metasfresh.com:6001/metasfresh/metasfresh-db-init-pg-14-2:master_dockerimages_5.175.2_52_masterdockerimages
+  imageInit: nexus.metasfresh.com:6001/metasfresh/metasfresh-db-init-pg-14-2:master_dockerimages_5.175.2_61_masterdockerimages
   urlSeedDump: https://nexus.metasfresh.com/repository/mvn-release-releases/de/metas/dist/metasfresh-dist-dist/5.173/metasfresh-dist-dist-5.173-customfmt.pgdump
-  urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-36%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-36%2Bmasterdockerimages-sql-only.tar.gz
+  urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-61%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-61%2Bmasterdockerimages-sql-only.tar.gz
   name: metasfresh
   port: 
     db: 5432
@@ -39,19 +41,20 @@ search:
   image: docker.elastic.co/elasticsearch/elasticsearch:7.17.1
   port: 
     search: 9200
+  resources:
+    limits:
+      memory: 1024Mi
   dataStorageSize: 5Gi
   clusterName: metasfresh
-  resources:
-    memLimit: 1073741824 #(in bytes)
 
 webapi:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-api:master_dockerimages_5.175.2_52_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-api:master_dockerimages_5.175.2_61_masterdockerimages
   port:
     webapi: 8080
     debug: 8789
 
 webui:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-dev:master_dockerimages_5.175.2_3_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-dev:master_dockerimages_5.175.2_59_masterdockerimages
   port:
     webui: 80
   debug:
