--- a/distribution/kubernetes/minikube/metasfresh-helm/templates/app.yaml
+++ b/distribution/kubernetes/minikube/metasfresh-helm/templates/app.yaml
@@ -83,6 +83,8 @@ spec:
           value: metasfresh-{{ .Release.Name }}-search
         - name: ES_PORT
           value: '{{ .Values.search.port.search }}'
+        - name: ES_ENABLE
+          value: 'y'
         # This var is needed to prevent an error at startup; thx to https://stackoverflow.com/questions/69487385/elasticsearch-client-is-defaulting-to-localhost 
         - name: SPRING_DATA_ELASTICSEARCH_CLIENT_REACTIVE_ENDPOINTS
           value: metasfresh-{{ .Release.Name }}-search:{{ .Values.search.port.search }}
