--- a/distribution/kubernetes/minikube/metasfresh-helm/templates/db-secret.yaml
+++ b/distribution/kubernetes/minikube/metasfresh-helm/templates/db-secret.yaml
@@ -7,4 +7,4 @@ type: Opaque
 data:
   username: {{ .Values.db.username | b64enc }}
   password: {{ .Values.db.password | b64enc }}
-  
+  postgrespw: {{ .Values.db.postgrespw | b64enc }}
