--- a/distribution/kubernetes/minikube/metasfresh-helm/values.yaml
+++ b/distribution/kubernetes/minikube/metasfresh-helm/values.yaml
@@ -1,5 +1,5 @@
 app:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-app:master_dockerimages_5.175.2_36_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-app:master_dockerimages_5.175.2_61_masterdockerimages
   port:
     app: 8282
     debug: 8788
@@ -11,14 +11,15 @@ app:
 
 db:
   image: dockerhub.metasfresh.com/postgres:14.2
-  imageInit: nexus.metasfresh.com:6001/metasfresh/metasfresh-db-init-pg-14-2:master_dockerimages_5.175.2_36_masterdockerimages
+  imageInit: nexus.metasfresh.com:6001/metasfresh/metasfresh-db-init-pg-14-2:master_dockerimages_5.175.2_61_masterdockerimages
   urlSeedDump: https://nexus.metasfresh.com/repository/mvn-release-releases/de/metas/dist/metasfresh-dist-dist/5.173/metasfresh-dist-dist-5.173-customfmt.pgdump
-  urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-36%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-36%2Bmasterdockerimages-sql-only.tar.gz
+  urlMigrationScript: https://repo.metasfresh.com/repository/mvn-master_dockerimages-releases/de/metas/dist/metasfresh-dist-dist/5.175.2-61%2Bmasterdockerimages/metasfresh-dist-dist-5.175.2-61%2Bmasterdockerimages-sql-only.tar.gz
   name: metasfresh
   port: 
     db: 5432
   username: metasfresh
   password: metasfresh
+  postgrespw: metasfresh
   debug:
     printBashCmds: '"n"'
   dbConnectionPoolMaxSize: 60
@@ -35,9 +36,10 @@ search:
   image: docker.elastic.co/elasticsearch/elasticsearch:7.16.3
   port: 
     search: 9200
-  clusterName: metasfresh
   resources:
-    memLimit: 1073741824 #(in bytes)
+    limits:
+      memory: 1024Mi
+  clusterName: metasfresh
 
 pgadmin:
   image: dpage/pgadmin4
@@ -47,13 +49,13 @@ pgadmin:
   defaultPassword: metasfresh
 
 webapi:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-api:master_dockerimages_5.175.2_36_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-api:master_dockerimages_5.175.2_61_masterdockerimages
   port:
     webapi: 8080
     debug: 8789
 
 webui:
-  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-dev:master_dockerimages_5.175.2_3_masterdockerimages
+  image: nexus.metasfresh.com:6001/metasfresh/metasfresh-webui-dev:master_dockerimages_5.175.2_59_masterdockerimages
   port:
     webui: 80
 
