--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -79,6 +79,8 @@ metasfresh.attachments.v2.api.uri={{metasfresh.api.v2.baseurl}}/attachment
 
 metasfresh.enqueue-purchases-candidate-v2.api.uri={{metasfresh.api.v2.baseurl}}/order/purchase/enqueueForOrdering
 
+metasfresh.lookup-externalreference-v2.api.uri={{metasfresh.api.v2.baseurl}}/externalRefs
+
 # --------------------------------------------------------------------------------
 # Build info
 # --------------------------------------------------------------------------------
