--- a/frontend/package.json
+++ b/frontend/package.json
@@ -128,10 +128,11 @@
     "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
-    "@fullcalendar/core": "5.10.1",
+    "@fullcalendar/core": "^5.10.1",
     "@fullcalendar/daygrid": "5.10.1",
     "@fullcalendar/interaction": "5.10.1",
     "@fullcalendar/react": "5.10.1",
+    "@fullcalendar/resource-timeline": "^5.10.1",
     "@fullcalendar/timegrid": "5.10.1",
     "@stomp/stompjs": "6.1.2",
     "@zxing/library": "0.18.6",
