--- a/misc/services/camel/de-metas-camel-externalsystems/core/pom.xml
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/pom.xml
@@ -304,14 +304,14 @@
                         </auth>
                     </from>
                 </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
+                <!-- <executions> -->
+                    <!-- <execution> -->
+                        <!-- <phase>package</phase> -->
+                        <!-- <goals> -->
+                            <!-- <goal>build</goal> -->
+                        <!-- </goals> -->
+                    <!-- </execution> -->
+                <!-- </executions> -->
             </plugin>
 
             <!-- Create tests JAR -->
