--- a/misc/services/procurement-webui/procurement-webui-frontend/package.json
+++ b/misc/services/procurement-webui/procurement-webui-frontend/package.json
@@ -9,7 +9,7 @@
     "@types/classnames": "^2.2.11",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "17.0.3",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-transition-group": "^4.4.0",
@@ -85,6 +85,9 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
     "prettier": "^2.2.1"
+  },
+  "resolutions": {
+    "@types/react": "17.0.3"
   },
   "proxy": "http://localhost:5000"
 }
