refs https://github.com/metasfresh/metasfresh/issues/12824

--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/main/resources/application.properties
@@ -15,9 +15,9 @@ metasfresh.api.authtoken=<secret>
 metasfresh.api.baseurl=http://localhost:8282/api
 # override via env variable METASFRESH_API_V2_BASEURL
 metasfresh.api.v2.baseurl=http://localhost:8282/api/v2
-# override via env variable METASFRESH_ERROR-REPORT_FOLDER 
+# override via env variable METASFRESH_ERROR-REPORT_FOLDER
 metasfresh.error-report.folder=file://C://error-report
-# override via env variable EXTERNALSYSTEM_RAW-DATA_URI 
+# override via env variable EXTERNALSYSTEM_RAW-DATA_URI
 # to not store the data on disk, you could do log:Raw-Data (or maybe stub:Raw-Data)
 externalSystem.raw-data.uri=file://C://raw_data
 
@@ -92,3 +92,7 @@ info.build.ciBuildNo=@env.BUILD_NUMBER@
 info.build.ciBuildTag=@env.BUILD_TAG@
 info.build.ciBuildUrl=@env.BUILD_URL@
 info.build.ciJobName=@env.JOB_NAME@
+
+dispatcher.seda.concurrentConsumers=4
+dispatcher.seda.queueSize=1
+dispatcher.seda.blockWhenFull=true
