--- a/misc/services/camel/de-metas-camel-externalsystems/core/src/test/resources/application.properties
+++ b/misc/services/camel/de-metas-camel-externalsystems/core/src/test/resources/application.properties
@@ -38,3 +38,7 @@ metasfresh.salesorder.v2.api.uri={{metasfresh.api.v2.baseurl}}/orders/sales
 metasfresh.externalsystem.v2.api.uri={{metasfresh.api.v2.baseurl}}/externalsystem
 
 metasfresh.error-report.folder=file://C://error-report
+
+dispatcher.seda.concurrentConsumers=2
+dispatcher.seda.queueSize=1
+dispatcher.seda.blockWhenFull=true
